<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Reactive Video</string>
    <string name="login_title">Авторизация</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="login_action">Войти</string>
    <string name="register_action">Регистрация</string>
    <string name="backend_url_title">Backend URL</string>
    <string name="backend_url_hint">http://10.0.2.2:8081</string>
    <string name="save_action">Сохранить</string>
    <string name="cancel_action">Отмена</string>
    <string name="selected_bucket_label">Выбрать бакет</string>
    <string name="create_bucket_label">Создать бакет</string>
    <string name="create_bucket_hint">Название бакета</string>
    <string name="upload_file_action">Загрузить файл</string>
    <string name="files_title">Файлы</string>
    <string name="preview_action">Просмотр</string>
    <string name="recognize_action">Разметить</string>
    <string name="cached_recognize_action">Кэш. разметка</string>
    <string name="text_action">Текст и TTS</string>
    <string name="download_action">Скачать</string>
    <string name="delete_action">Удалить</string>
    <string name="toggle_annotations_action">Показать/скрыть разметку</string>
    <string name="speak_action">Озвучить текст</string>
    <string name="speak_cached_action">Кэш. озвучка</string>
    <string name="logout_action">Выйти</string>
    <string name="settings_action">Настройки</string>
    <string name="refresh_action">Обновить</string>
    <string name="no_files">Файлы пока не загружены</string>
    <string name="no_buckets">Бакеты не найдены</string>
    <string name="delete_bucket_prefix">Удалить:</string>
    <string name="user_prefix">Пользователь: %1$s</string>
    <string name="backend_prefix">Backend: %1$s</string>
    <string name="download_success">Файл сохранён: %1$s</string>
    <string name="image_preview_title">Просмотр изображения</string>
    <string name="recognition_title">Разметка изображения</string>
    <string name="video_preview_title">Просмотр видео</string>
    <string name="text_preview_title">Просмотр текста</string>
    <string name="bucket_required">Сначала выберите бакет</string>
    <string name="delete_bucket_confirm">Удалить бакет %1$s?</string>
    <string name="delete_file_confirm">Удалить файл %1$s?</string>
    <string name="pick_file_error">Не удалось открыть выбор файла</string>
    <string name="loading_text">Загрузка…</string>
    <string name="empty_text_content">Файл пуст или не удалось получить его содержимое.</string>
    <string name="annotations_hidden">Разметка скрыта</string>
    <string name="annotations_visible">Разметка показана</string>
</resources>
